<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_screen_title">Settings</string>
    <string name="sort_name_asc">a -> z</string>
    <string name="sort_name_desc">z -> a</string>
    <string name="sort_time_added_asc">Recently added first</string>
    <string name="sort_time_added_desc">Recently added last</string>
    <string name="theme_auto">System theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_light">Light theme</string>

    <string name="sort_order_title">Sort order</string>
    <string name="theme_selection_title">App theme</string>

    <string name="preferences_screen_error">Something went wrong when updating settings.</string>
    <string name="word_list_screen_error">Something went wrong when retrieving words.</string>
    <string name="set_favourite_error">Something went wrong when updating the word.</string>
    <string name="get_word_error">Something went wrong when retrieving the word from database.</string>
    <string name="no_such_word_error">Sorry there\'s no such word.</string>
    <string name="no_word_definition">Sorry there\'s no definition of the word.</string>

    <string name="set_fav_icon_description">Set word favourite icon</string>
    <string name="set_not_fav_icon_description">Set word not favourite icon</string>
    <string name="search_icon_description">Search word favourite icon</string>
    <string name="search_label">Search</string>
    <string name="error_button">Try again</string>
    <string name="error_loading_words">Something went wrong when loading words.</string>
    <string name="no_definition_available">Sorry, there\'s no definition for the word</string>
    <string name="empty_search_icon">Empty search icon</string>
    <string name="empty_search_label">You have not searched for words yet.</string>

    <string name="screen_home">Home</string>
    <string name="screen_favourite">Favourite</string>
    <string name="screen_settings">Settings</string>
    <string name="screen_details">Word Details</string>
    <string name="screen_fav_details">Word Fav Details</string>

    <string name="label_definition">Definition:</string>
    <string name="label_part_of_speech">Part of speech:</string>
    <string name="label_synonyms">Synonyms:</string>
    <string name="label_derivation">Derivations:</string>
    <string name="label_examples">Examples:</string>
    <string name="label_syllables">Syllables:</string>
    <string name="label_pronunciation">Pronunciation:</string>
</resources>



















